--- a/style.css
+++ b/style.css
@@ -95,6 +95,25 @@ footer {
   padding: 20px 0;
 }
 
+@media only screen and (max-width: 960px) {
+  .main {
+    padding-top: 0;
+ }
+  }
+@media only screen and (max-width: 700px) {
+  .supporting img {
+    display: none;
+  }
+ }
+ @media only screen and (max-width: 470px) {
+  h1 {
+     font-size: 2 rem;
+  }
+  .gallery img {
+    margin: 0;
+  }
+
+
 footer .col-sm-8 {
   display: flex;
   justify-content: flex-end;
